# nrev-mcp

./: .gitignore  CHANGELOG.md  README.md
.claude-plugin/: marketplace.json
plugins/nrev-workflows/: .mcp.json  README.md
plugins/nrev-workflows/.claude-plugin/: plugin.json
plugins/nrev-workflows/mcp/: pyproject.toml
plugins/nrev-workflows/mcp/src/nrev_workflows_mcp/: api.py  app.py  auth.py  projections.py  ranking.py  server.py  shapes.py  tenant.py  tools_auth.py  tools_discovery.py  (+6 more)
plugins/nrev-workflows/skills/building-workflows/: SKILL.md
plugins/nrev-workflows/skills/content-generation/: SKILL.md
plugins/nrev-workflows/skills/gtm-automations/: SKILL.md
plugins/nrev-workflows/skills/list-building/: SKILL.md
plugins/nrev-workflows/skills/node-settings/: SKILL.md
plugins/nrev-workflows/skills/nomination/: SKILL.md
plugins/nrev-workflows/skills/qualification-and-disqualification/: SKILL.md
plugins/nrev-workflows/skills/research/: SKILL.md
plugins/nrev-workflows/skills/troubleshooting/: SKILL.md
plugins/nrev-workflows/skills/workflow-examples/: SKILL.md
scripts/: bump-version.sh  sync-plugin.sh
servers/workflows/: pyproject.toml
servers/workflows/src/nrev_workflows_mcp/: __init__.py  api.py  app.py  cli.py  config.py  login.py  projections.py  server.py  tables_api.py  tools_execution.py  tools_tables.py  tools_workflows.py  transport.py  um_api.py
servers/workflows/tests/: test_analysis.py  test_auth.py  test_discovery.py  test_execution.py  test_projections.py  test_shapes.py  test_tables.py  test_tenant.py  test_transport.py
