[project]
name = "nrev-workflows-mcp"
version = "0.6.0"
description = "MCP server for building and operating nRev workflows from AI agents (Claude Code, Cowork, Claude.ai)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
nrev-workflows-mcp = "nrev_workflows_mcp.server:main"
nrev-workflows = "nrev_workflows_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nrev_workflows_mcp"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
